--- a/TODO
+++ b/TODO
@@ -7,3 +7,6 @@ Must-haves:
 Nice-to-haves:
 	☐	Convert vendor logos to svg
 	☐	Change from scroll.js to that smooth-scroll CSS property?
+
+Round Top Section:
+	☐	Have new bg img be just behind prose since full width makes vendor logos hard to read?
